--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -13,6 +13,7 @@
         <p style="margin-top:12px;">
             <a class="btn" href="{% url 'polls:detail' question.id %}">Yenidən səs ver</a>
             <a class="btn" href="{% url 'polls:index' %}">Bütün sorğular</a>
+            <a class="btn" href="{% url 'home' %}">Ana səhifə</a>
         </p>
     </div>
 {% endblock %}
